k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-page-replicator
  namespace: app
  labels:
    app: login-page-replicator
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: login-page-replicator
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9113
      targetPort: 9113
